<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">伽岚果</string>
    <string name="skip">跳过</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="mic">说说</string>
    <string name="my">我的</string>
    <string name="price">币/小时</string>
    <string name="vertical">丨</string>
    <string name="king">王者荣耀</string>
    <string name="chicken">绝地求生</string>
    <string name="hero">英雄联盟</string>
    <string name="other">其他</string>
    <string name="input_account">请输入手机号</string>
    <string name="input_password">请输入验证码</string>
    <string name="no_account">还未注册账号</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="phone_error">手机号格式错误</string>
    <string name="phone_beyond">手机号位数超出限制!</string>
    <string name="attention">关注</string>
    <string name="attention_already">取关</string>
    <string name="fans">粉丝</string>
    <string name="service">在线客服</string>
    <string name="master">申请大神</string>
    <string name="setting">设置</string>
    <string name="my_order">我的订单</string>
    <string name="wallet">我的钱包</string>
    <string name="data">个人资料</string>
    <string name="nick_name">昵称</string>
    <string name="id">ID</string>
    <string name="interest">兴趣</string>
    <string name="chat">聊天</string>
    <string name="order">下单</string>
    <string name="not_empty">账号或密码不可为空</string>
    <string name="login_failed">访问失败,请稍后重试</string>
    <string name="error_token">登录过期</string>
    <string name="loading">加载中....</string>
    <string name="no_net">当前无网络</string>
    <string name="data_error">数据错误,请稍后重试</string>
    <string name="confirm_order">确认订单</string>
    <string name="buy_type">购买技能</string>
    <string name="order_time">服务时间</string>
    <string name="order_amount">购买数量</string>
    <string name="amount">数量</string>
    <string name="marks">备注</string>
    <string name="edit_hint">留下您的备注吧</string>
    <string name="all_money">总金额:</string>
    <string name="money">币</string>
    <string name="submit">提交订单</string>
    <string name="format_bill">支付%1$s元</string>
    <string name="small_all">小计</string>
    <string name="no_login">您还未登录，请先登录</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="no_more_less">不能再少啦!</string>
    <string name="skill_please">请先选择要购买的技能</string>
    <string name="time_please">请先确定服务时间</string>
    <string name="time_to_early">您选择的时间已经过啦</string>
    <string name="order_pay">支付订单</string>
    <string name="app_pay">余额</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="button_pay">支付</string>
    <string name="all_order">所有订单</string>
    <string name="service_failed">访问服务器失败</string>
    <string name="user_name">昵称</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="sign">签名</string>
    <string name="more">更多</string>
    <string name="interesting">兴趣</string>
    <string name="profession">格言</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="permission_request">应用运行需要授予权限，点击确定继续</string>
    <string name="permission_deny">没有授予权限，应用无法正常运行</string>
    <string name="permission_never_ask">您需要手动授予权限，应用才可运行</string>
    <string name="edit_first">个人资料</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="album">手机相册</string>
    <string name="camera">手机拍摄</string>
    <string name="crop_image">图片裁剪</string>
    <string name="upload_image_success">上传头像成功</string>
    <string name="default_sign">这人很懒,没有签名</string>
    <string name="name_first">请先设置昵称</string>
    <string name="gender_first">请先选择性别</string>
    <string name="birthday_first">请先选择生日</string>
    <string name="head_image_first">请先上传头像</string>
    <string name="master_image_first">请先选择大神图片</string>
    <string name="user_update">个人信息已更新</string>
    <string name="app_copy_right">Copyright©2019</string>
    <string name="company_name">上海羽迹网络科技有限公司 版权所有</string>
    <string name="setting_sound">音效设置</string>
    <string name="setting_privacy">隐私设置</string>
    <string name="setting_notice">消息提醒</string>
    <string name="privacy_default">默认</string>
    <string name="privacy_open">对他人显示距离</string>
    <string name="privacy_close">关闭</string>
    <string name="privacy_close_detail">对他人不显示距离</string>
    <string name="constellation">星座</string>
    <string name="game">游戏</string>
    <string name="invite_code">我的邀请码</string>
    <string name="invite_tips">推荐朋友填写您的邀请码可参与运营活动领取礼品</string>
    <string name="invite_copy">点击邀请码复制</string>
    <string name="input_invite">填写邀请码</string>
    <string name="submit_only">提交</string>
    <string name="invite_limit">每位用户只能填写一次邀请码，\n并且不能填写自己的哦^_^!</string>
    <string name="order_state_pay">已支付</string>
    <string name="order_state_no_pay">待支付</string>
    <string name="order_state_complete">已完成</string>
    <string name="order_state_click">已接单</string>
    <string name="order_state_service">服务中</string>
    <string name="order_state_comment">待评价</string>
    <string name="order_state_error">订单异常</string>
    <string name="order_state_cancel">已取消</string>
    <string name="order_state_start_click">开始接单</string>
    <string name="order_state_click_complete">完成订单</string>
    <string name="order_tip_comment_finish">已评价</string>
    <string name="order_tip_to_comment">待评价</string>
    <string name="order_tips_pay">订单已支付，等待接单</string>
    <string name="order_tips_click">已接单，等待服务</string>
    <string name="comment_success">评价成功</string>
    <string name="comment_failed">评价失败，请稍后重试</string>
    <string name="order_tip_pay">请在5分中内付款</string>
    <string name="order_tip_wait">等待大神接单</string>
    <string name="order_tip_no_pay">取消原因:付款超时</string>
    <string name="order_tip_no_wait">取消原因:大神未接单</string>
    <string name="accept_success">接单成功</string>
    <string name="accept_failed">接单失败</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failed">提交失败</string>
    <string name="location_open">已开启对其他用户显示距离</string>
    <string name="location_close">已关闭对其他用户显示距离</string>
    <string name="copy_invite_success">邀请码已复制到剪切板</string>
    <string name="not_null_invite">邀请码不可为空</string>
    <string name="invite_is_me">不能填写自己的邀请码</string>
    <string name="invite_inputed">已填写过邀请码</string>
    <string name="invite_success">成功提交邀请码</string>
    <string name="login_rule">登录既表示同意应用条款</string>
    <string name="comment_hint">说说哪里好，其他用户也想知道</string>
    <string name="code_success">验证码已发送</string>
    <string name="code_failed">发送失败，请稍后重试</string>
    <string name="master_tip">提交大神申请,头像必须是本人,否则会审核不通过!</string>
    <string name="rule">应用条款</string>
    <string name="real_name">真实姓名:</string>
    <string name="id_card">身份证号:</string>
    <string name="wechat_id">微信账号:</string>
    <string name="accompany_type">陪玩类型:</string>
    <string name="tips_comment_complete">评价已完成</string>
    <string name="appeal">申诉</string>
    <string name="phone_num">手机号:</string>
    <string name="data_loading">数据加载中</string>
    <string name="tips">提示</string>
    <string name="tips_attention">确定要取消关注吗？</string>
    <string name="attention_success">关注成功</string>
    <string name="attention_cancel_success">取消关注</string>
    <string name="phone_first">请先填写正确手机号</string>
    <string name="real_name_first">请先填写真实姓名</string>
    <string name="id_first">请填写正确身份证号</string>
    <string name="wechat_first">请先填写微信提现账号</string>
    <string name="game_type_first">至少选择一项陪玩游戏</string>
    <string name="tips_master">申请大神注意事项：\n 1.请提供真实的身份、段位等信息，否则无法通过审核；\n 2.请使用美观、清晰、无面部遮挡的真实头像；\n
    3.陪玩品类每次限申请一个，审核未通过前无法申请其他品类；\n 4.微信账号用于大神收入的提现，请确认账号信息正确无误；\n 5.其他需要的注意事项请参阅大神须知</string>
    <string name="master_index">大神须知</string>
    <string name="good_comment">好评</string>
    <string name="bad_comment">差评</string>
    <string name="quit_login">退出登录</string>
    <string name="tips_login">确定要退出登录吗？</string>
    <string name="wallet_remain">剩余果币:</string>
    <string name="wallet_recharge">充值</string>
    <string name="tips_wallet">1人民币等于1果币</string>
    <string name="recharge_type">充值方式</string>
    <string name="tips_order">暂无订单,可点击大神下达订单</string>
    <string name="conversation">会话</string>
    <string name="photo_failed">获取照片失败</string>
    <string name="location_msg">应用需要获取您的位置信息,向您展示附近的大神</string>
    <string name="new_message">您有新的动态</string>
    <string name="cash">提现</string>
    <string name="wallet_now">立即充值</string>
    <string name="cash_rule">提现要求:</string>
    <string name="cash_rule_detail">①剩余果币必须高于%1$d币才能提现\n②单次提现的金额必须是%2$d的整倍数\n③单笔提现最大金额为%3$d元\n④单个账户每日最多提现%4$d次\n⑤提现成功会转至您指定的微信账户中\n</string>
    <string name="cash_no_more">仅限金额不可为0</string>
    <string name="cash_tip">请输入提现金额</string>
    <string name="cash_success">提现成功</string>
    <string name="wallet_tips_money">请先选择充值金额</string>
    <string name="wallet_tips_type">请先选择充值方式</string>
    <string name="pay_no_more_gold">当前果币不足，请选择其他付款方式</string>
    <string name="format_cash">根据提现要求，您的提现金额修正为%1$d元</string>
    <string name="webview_title_activity">活动</string>
    <string name="history">历史记录</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_cancel">支付取消</string>
    <string name="no_master">所选分类还没有大神</string>
    <string name="go_service">请到我的界面联系在线客服</string>
    <string name="advance_start">提前开始</string>
    <string name="advance_finish">提前结束</string>
    <string name="master_skill">大神技能:</string>
    <string name="official_tips">这是官方大大!</string>
    <string name="official_number">1000</string>
    <string name="tip_add">上传充分说明技能水平的截图，jpg，png均可</string>
    <string name="edit_success">修改成功</string>
    <string name="master_wait">等待审核</string>
    <string name="tip_id">ID是账号的唯一凭证，只可修改一次\n支持大小写字母数字和下划线\n且长度不可大于16位</string>
    <string name="tip_nick_name">好的昵称可以让你的朋友更容易记住你</string>

    <string name="price_detail_place"><![CDATA[<font color="#000000"><small>%1$s</small></font>]]></string>

    <string name="developing">开发中…</string>

    <string name="sound_tip">按住说话，3–15S</string>
    <string name="guide_apply_master">请先申请成为大神，才能上传说说~</string>
    <string name="audio_first">请先选择音频</string>
    <string name="no_audio">手机文件中未找到音频文件</string>

</resources>
