<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MoreDetailActivity"
    android:orientation="vertical"
    >

    <include layout="@layout/blue_toolbar"/>

    <com.play.accompany.design.DetailLayout
        android:id="@+id/detail_game"
        app:title="@string/game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.play.accompany.design.DetailLayout
        android:id="@+id/detail_sign"
        app:title="@string/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.play.accompany.design.DetailLayout
        android:id="@+id/detail_interest"
        app:title="@string/interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.play.accompany.design.DetailLayout
        android:id="@+id/detail_word"
        app:title="@string/profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>