<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/tv_album"
        android:text="@string/album"
        android:textSize="24sp"
        android:textColor="@color/color_gray"
        android:padding="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/color_gray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <TextView
        android:id="@+id/tv_camera"
        android:text="@string/camera"
        android:textColor="@color/color_gray"
        android:padding="8dp"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/color_gray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:textColor="@color/color_gray"
        android:textSize="24sp"
        android:padding="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>