<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InviteCodeActivity"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/blue_toolbar"/>

        <TextView
            android:id="@+id/tv_invite"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:background="@drawable/invite_text_bg"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/invite_text"
        android:text="@string/invite_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/invite_copy"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>



    <ImageView
        android:id="@+id/img_switch"
        android:layout_marginStart="20dp"
        android:layout_width="40dp"
        android:layout_height="40dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/lin_expand"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_invite"
            android:textColor="#9699AA"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/invite_edit"
            android:hint="@string/input_invite"
            android:gravity="center"
            android:textColorHint="#9699AA"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#9699AA"
        android:text="@string/invite_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_submit"
            android:text="@string/submit_only"
            android:layout_gravity="center"
            android:textColor="@color/color_white"
            android:background="@drawable/invite_button"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </RelativeLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/test"
        android:layout_marginTop="10dp"
        android:text="定位用的"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>