<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
    >
        <LinearLayout
            android:id="@+id/ll_king"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:src="@mipmap/bar_king"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/king"
                android:textColor="@color/color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_chicken"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:src="@mipmap/bar_chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/chicken"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hero"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:src="@mipmap/bar_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/hero"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_other"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:src="@mipmap/bar_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/other"
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    </LinearLayout>
