<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditUserActivity"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_title"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_head"
                android:src="@mipmap/request_head"
                android:layout_gravity="center_horizontal"
                app:riv_corner_radius="60dp"
                android:layout_marginTop="20dp"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/edit_name"
                        android:hint="请输入您的昵称"
                        android:background="@null"
                        android:layout_marginLeft="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:background="@color/color_order_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioGroup
                        android:id="@+id/gender_group"
                        android:orientation="horizontal"
                        android:layout_marginLeft="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/gender_male"
                            android:text="@string/gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:id="@+id/gender_female"
                            android:layout_marginLeft="20dp"
                            android:text="@string/gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RadioGroup>
                </LinearLayout>
                <View
                    android:background="@color/color_order_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:id="@+id/lin_birthday"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_marginLeft="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:background="@color/color_order_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/edit_sign"
                        android:hint="介绍下你自己吧"
                        android:background="@null"
                        android:layout_marginLeft="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>